--- a/nicepage.css
+++ b/nicepage.css
@@ -35535,7 +35535,7 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-menu-1 {
-  margin: -33px 0 22px auto;
+  margin: -33px -1px 22px auto;
 }
 
 .u-header .u-nav-1 {
@@ -35554,6 +35554,7 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-header .u-menu-1 {
     margin-top: -33px;
+    margin-right: -1px;
   }
 }
 @media (max-width: 991px) {
